chore: fix sonarqube + add releases (#10)
* chore: fix sonarqube + add releases

* more tests